Painting blocks vol1

--- a/html/index.html
+++ b/html/index.html
@@ -269,10 +269,10 @@
                 <p class="card-title fw-light fst-italic text-start m-0 p-0">
                   Pipeline stalling?
                 </p>
-                <p class="card-description text-start fw-semibold pt-2 pb-1">
+                <p class="card-description text-start fw-semibold pt-2 pb-1 ">
                   Virtual Sales
                 </p>
-                <p class="card-description text-start fw-light">
+                <p class="card-description text-start fw-light info">
                   Outbound sales teams for lead generation, qualification, and closing.
                 </p>
                 <a href="#!" class="btn btn-lightblue-outline btn-lg border-0 p-0 text-start justify-content-start mt-2"> 
@@ -286,10 +286,10 @@
                 <p class="card-title fw-light fst-italic text-start m-0 p-0">
                   Pipeline stalling?
                 </p>
-                <p class="card-description text-start fw-semibold pt-2 pb-1">
+                <p class="card-description text-start fw-semibold pt-2 pb-1 ">
                   Virtual Sales
                 </p>
-                <p class="card-description text-start fw-light">
+                <p class="card-description text-start fw-light info">
                   Outbound sales teams for lead generation, qualification, and closing.
                 </p>
                 <a href="#!" class="btn btn-lightblue-outline btn-lg border-0 p-0 text-start justify-content-start mt-2"> 
@@ -303,10 +303,10 @@
                 <p class="card-title fw-light fst-italic text-start m-0 p-0">
                   Pipeline stalling?
                 </p>
-                <p class="card-description text-start fw-semibold pt-2 pb-1">
+                <p class="card-description text-start fw-semibold pt-2 pb-1 ">
                   Virtual Sales
                 </p>
-                <p class="card-description text-start fw-light">
+                <p class="card-description text-start fw-light info">
                   Outbound sales teams for lead generation, qualification, and closing.
                 </p>
                 <a href="#!" class="btn btn-lightblue-outline btn-lg border-0 p-0 text-start justify-content-start mt-2"> 
@@ -320,10 +320,10 @@
                 <p class="card-title fw-light fst-italic text-start m-0 p-0">
                   Pipeline stalling?
                 </p>
-                <p class="card-description text-start fw-semibold pt-2 pb-1">
+                <p class="card-description text-start fw-semibold pt-2 pb-1 ">
                   Virtual Sales
                 </p>
-                <p class="card-description text-start fw-light">
+                <p class="card-description text-start fw-light info">
                   Outbound sales teams for lead generation, qualification, and closing.
                 </p>
                 <a href="#!" class="btn btn-lightblue-outline btn-lg border-0 p-0 text-start justify-content-start mt-2"> 
@@ -337,10 +337,10 @@
                 <p class="card-title fw-light fst-italic text-start m-0 p-0">
                   Pipeline stalling?
                 </p>
-                <p class="card-description text-start fw-semibold pt-2 pb-1">
+                <p class="card-description text-start fw-semibold pt-2 pb-1 ">
                   Virtual Sales
                 </p>
-                <p class="card-description text-start fw-light">
+                <p class="card-description text-start fw-light info">
                   Outbound sales teams for lead generation, qualification, and closing.
                 </p>
                 <a href="#!" class="btn btn-lightblue-outline btn-lg border-0 p-0 text-start justify-content-start mt-2"> 
@@ -359,13 +359,16 @@
       <!-- our services with featured -->
 
       <!-- prefer manage block -->
-      <section class="pageservice-banner bg-info theme-prefer" >
+      <section class="pageservice-banner theme-prefer" >
         <div class="container position-relative">
           <div class="row">
-            <div class="col-12 col-md-5 col-lg-6 d-flex align-items-center">
+            <div class="col-12 col-md-6 col-lg-6 d-flex align-items-center">
               <div class="pageservice-banner-text">               
                 <div class="pageservice-banner-copy">
-                  <h2>Prefer to Manage the Team Yourself?</h2>
+                  <div class="intro-title">
+                    <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-prefermanage.svg" alt="Icon" width="50" height="50">
+                    <h2 class="p-0">Prefer to Manage the Team Yourself?</h2>
+                  </div>
                   <p>
                     Some clients want direct oversight. We get it. Our Client-Managed Teams model gives you vetted professionals who report to you, while we handle recruiting, EOR onboarding, HR, and ongoing support. We specialize in building Engineering/IT teams (Frontend, Backend, QA, DevOps, SRE & Infrastructure) and Finance & Accounting teams. Same rigorous hiring. 
                   </p>
@@ -381,7 +384,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-7 col-lg-6">
+            <div class="col-12 col-md-6 col-lg-6">
               <!-- Imagen -->
             </div>
           </div>
@@ -390,70 +393,60 @@
       <!-- prefer manage block -->
 
       <!-- why amalga large -->
-      <section class="title-section all-color-primary">
-        <div class="container">
-          <div class="title-section-copy">
-            <h3>Why Amalga</h3>
-            <h2>Boutique Attention. Enterprise Results.</h2>
-            <p>We deliver white-glove service with the rigor of a large-scale operation. You get direct access to leadership and a team that treats your business like their own.</p>
+       <section class="block-and-cards theme-gray" >
+        <div class="title-section all-color-primary">
+          <div class="container">
+            <div class="title-section-copy">
+              <h3>Why Amalga</h3>
+              <h2>Boutique Attention. Enterprise Results.</h2>
+              <p>We deliver white-glove service with the rigor of a large-scale operation. You get direct access to leadership and a team that treats your business like their own.</p>
+            </div>
           </div>
         </div>
-      </section>
-      <section class="block-and-cards theme-lightblue-center" >
         <div class="container">
-          <div class="block-and-cards-grid">
-            <div class="block-and-cards-item theme-long-card" >
-              <div class="d-flex align-items-start">
-                <div class="block-and-cards-icon m-0 p-0"> 
-                  <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
-                </div>
-                <div class="block-and-cards-copys ps-4">
-                  <p class="card-title m-0 text-start">Direct Leadership Access</p>
-                  <p class="card-description text-start mt-2">
-                    C-suite involvement on every account. Talk to decision-makers, not a rotating cast of junior reps. Your business is always a priority.
-                  </p>
-                </div>
-              </div>  
+          <div class="block-and-cards-item theme-long-card" >
+            <div class="block-and-cards-icon m-0 p-0"> 
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
             </div>
-            <div class="block-and-cards-item theme-long-card" >
-              <div class="d-flex align-items-start">
-                <div class="block-and-cards-icon m-0 p-0"> 
-                  <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
-                </div>
-                <div class="block-and-cards-copys ps-4">
-                  <p class="card-title m-0 text-start">Managed Services, Not a Body Shop</p>
-                  <p class="card-description text-start mt-2">
-                    We own execution and outcomes. Documented workflows, clear KPIs, ongoing QA and coaching, regular performance reporting. Predictable delivery.
-                  </p>
-                </div>
-              </div>  
+            <div class="block-and-cards-copys ps-4">
+              <p class="card-title m-0 text-start">Direct Leadership Access</p>
+              <p class="card-description text-start mt-2">
+                C-suite involvement on every account. Talk to decision-makers, not a rotating cast of junior reps. Your business is always a priority.
+              </p>
             </div> 
-            <div class="block-and-cards-item theme-long-card" >
-              <div class="d-flex align-items-start">
-                <div class="block-and-cards-icon m-0 p-0"> 
-                  <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
-                </div>
-                <div class="block-and-cards-copys ps-4">
-                  <p class="card-title m-0 text-start">Enterprise-Grade Security</p>
-                  <p class="card-description text-start mt-2">
-                    ISO 27001 certified. HIPAA compliant with BAAs available. SOC 2 in progress. Your data is protected with enterprise-level rigor.
-                  </p>
-                </div>
-              </div>  
+          </div>
+          <div class="block-and-cards-item theme-long-card" >
+            <div class="block-and-cards-icon m-0 p-0"> 
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
             </div>
-            <div class="block-and-cards-item theme-long-card" >
-              <div class="d-flex align-items-start">
-                <div class="block-and-cards-icon m-0 p-0"> 
-                  <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
-                </div>
-                <div class="block-and-cards-copys ps-4">
-                  <p class="card-title m-0 text-start">Come Visit Anytime</p>
-                  <p class="card-description text-start mt-2">
-                    All clients and prospective clients are welcome to visit our facilities. Meet your team in person, see operations firsthand. A few hours by plane from most U.S. cities.
-                  </p>
-                </div>
-              </div>  
+            <div class="block-and-cards-copys ps-4">
+              <p class="card-title m-0 text-start">Direct Leadership Access</p>
+              <p class="card-description text-start mt-2">
+                C-suite involvement on every account. Talk to decision-makers, not a rotating cast of junior reps. Your business is always a priority.
+              </p>
+            </div> 
+          </div>
+          <div class="block-and-cards-item theme-long-card" >
+            <div class="block-and-cards-icon m-0 p-0"> 
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
             </div>
+            <div class="block-and-cards-copys ps-4">
+              <p class="card-title m-0 text-start">Direct Leadership Access</p>
+              <p class="card-description text-start mt-2">
+                C-suite involvement on every account. Talk to decision-makers, not a rotating cast of junior reps. Your business is always a priority.
+              </p>
+            </div> 
+          </div>
+          <div class="block-and-cards-item theme-long-card" >
+            <div class="block-and-cards-icon m-0 p-0"> 
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-lock.svg" alt="Confidentiality by Design" loading="lazy" decoding="async" width="24" height="27"> 
+            </div>
+            <div class="block-and-cards-copys ps-4">
+              <p class="card-title m-0 text-start">Direct Leadership Access</p>
+              <p class="card-description text-start mt-2">
+                C-suite involvement on every account. Talk to decision-makers, not a rotating cast of junior reps. Your business is always a priority.
+              </p>
+            </div> 
           </div>
           <p class="text-center block-and-cards-lastcopy">
             Our leadership team brings decades of experience from world-class organizations including 
@@ -565,7 +558,7 @@
           </div>
         </div>
       </section>
-      <section class="pageservice-banner" >
+      <section class="pageservice-banner theme-justform" style="background: linear-gradient(180deg,#FFFFFF 20%, #F1F5F9 80%)" >
         <div class="container position-relative">
           <div class="row">
             <div class="col-12">
@@ -588,25 +581,28 @@
       <!-- form part -->
 
       <!-- faqs -->
-      <section class="faqsByArea">
+      <section class="faqsByArea theme-primarywhite">
         <div class="container">
-          <h2 class="titleSeciton text-center">Frequently asked questions</h2>
+          <div class="title-section-copy pb-4">
+            <h3 >Questions</h3>
+            <h2 >Nearshore BPO Questions Answered</h2>
+          </div>
           <div class="faqsByArea--accordion">
-            <div class="accordion" id="faqs-legal-call">
+            <div class="accordion" id="faqs-homepage">
               <div class="accordion-item faqsByArea--item">
                 <div class="accordion-header faqsByArea--head"> 
                   <button class="accordion-button collapsed faqsByArea--btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-1" aria-expanded="false" aria-controls="faq-1"> 
                     <span class="question d-block"> 
-                      How is this different from a typical answering service?
-                      <span class="category"> Legal Call Center Services </span> 
+                      Will a nearshore team match our quality and culture standards?
+                      <span class="category"> Legal Intake Services </span> 
                     </span> 
                   </button> 
                 </div>
-                <div id="faq-1" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-legal-call">
+                <div id="faq-1" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-homepage">
                   <div class="accordion-body">
                     <div class="faqsByArea--body response">
                       <p> 
-                        Most answering services use generic scripts and operators who handle calls for dozens of different businesses. Our legal call center services use dedicated agents trained specifically for law firms. They learn your firm's practice areas, attorney names, and protocols. Callers feel like they're speaking with your staff, not an outsourced service.
+                        Our delivery model is built for U.S. expectations: bilingual, culturally fluent teams aligned to U.S. time zones, structured onboarding to your brand and processes, and proactive communication rhythms. Our team members are accent-neutral, and many have lived or worked in the United States. You'll find they communicate, write, and engage at the same level as U.S.-based professionals.
                       </p> 
                       <span class="category rounded-pill"> Legal Call Center Services </span>
                     </div>
@@ -622,7 +618,7 @@
                     </span> 
                   </button> 
                 </div>
-                <div id="faq-2" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-legal-call">
+                <div id="faq-2" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-homepage">
                   <div class="accordion-body">
                     <div class="faqsByArea--body response">
                       <p> 
@@ -642,7 +638,7 @@
                     </span> 
                   </button> 
                 </div>
-                <div id="faq-3" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-legal-call">
+                <div id="faq-3" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-homepage">
                   <div class="accordion-body">
                     <div class="faqsByArea--body response">
                       <p> 
@@ -662,7 +658,7 @@
                     </span> 
                   </button> 
                 </div>
-                <div id="faq-4" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-legal-call">
+                <div id="faq-4" class="accordion-collapse collapse faqsByArea--collapse" data-bs-parent="#faqs-homepage">
                   <div class="accordion-body">
                     <div class="faqsByArea--body response">
                       <p> 
@@ -680,22 +676,22 @@
       <!-- faqs -->
 
       <!-- last cta -->
-      <section class="calltoaction cta-primary-theme">
+      <section class="calltoaction cta-primary-theme lg-hg">
         <div class="container">
           <div class="calltoaction-cta">
             <div class="title-section">
               <div class="container">
                 <div class="title-section-copy">
-                  <h2>Ready to Answer Every Call?</h2>
-                  <p>Your clients deserve a live person, not a voicemail box. Our legal call center services team handles your
-                    phones so your attorneys can focus on practicing law.</p>
+                  <h3 class="fw-normal">Built on People. Proven by Performance.</h3>
+                  <h2>Ready to Scale Your Operations?</h2>
+                  <p>Let's talk about how a dedicated nearshore BPO team could support  your goals. No pressure, just a conversation.</p>
                 </div>
               </div>
             </div>
-            <div class="calltoaction-btns-grid"> 
+            <div class="calltoaction-btns-grid pb-0 w-100"> 
               <a href="#get-your-free-audit" class="btn btn-lightblue btn-lg"> 
                 <span>
-                  Get Your Free Call Center Audit
+                  Book a Discovery Call
                 </span>
               </a> 
               <a href="tel:(512)2003288" class="btn btn-lightblue-outline btn-lg"> 
@@ -703,15 +699,12 @@
                 <span>Call (512) 200-3288</span> 
               </a> 
             </div>
-            <div class="calltoaction-foot">
-              <p>No pressure, no hard sell. Just a conversation about what's possible.</p>
-            </div>
           </div>
         </div>
       </section>
       <!-- last cta -->
 
-    </div>
+    </section>
     <!-- end main content -->
 
     <!-- Scripts -->
@@ -735,8 +728,8 @@
             slidesPerView: 1,
             spaceBetween: 10,
           },
-          768: {
-            slidesPerView: 3,
+          767: {
+            slidesPerView: 2,
             spaceBetween: 10,
           },
           1024: {
