--- a/html/index.html
+++ b/html/index.html
@@ -954,8 +954,6 @@
        </section>
       <!-- whye nearshore -->
 
-
-
       <!-- why amalga large -->
        <section class="block-and-cards theme-gray" >
         <div class="title-section all-color-primary">
@@ -1023,6 +1021,111 @@
         </div>
       </section>
       <!-- why amalga large -->
+
+      <!-- process steps -->
+       <section class="block-whynearshore theme-timeline">
+        <div class="container">
+          <div class="row align-items-center">
+            <!-- Image -->
+            <div class="col-12 col-lg-6">
+              <div class="block-whynearshore-timeline">
+                <div class="block-whynearshore-item">
+                  <div class="row">
+                    <div class="col-12 col-md-2 col-lg-2">
+                      <div class="num-step">
+                        <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-step-1.svg" alt="Icon" class="img-fluid">
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-10 col-lg-10">
+                      <p><strong>Discovery & Scoping</strong></p>
+                      <p>
+                        We define workflows, KPIs, compliance requirements, and what success looks like for your operation.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="block-whynearshore-item">
+                  <div class="row">
+                    <div class="col-12 col-md-2 col-lg-2">
+                      <div class="num-step">
+                        <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-step-2.svg" alt="Icon" class="img-fluid">
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-10 col-lg-10">
+                      <p><strong>Discovery & Scoping</strong></p>
+                      <p>
+                        We define workflows, KPIs, compliance requirements, and what success looks like for your operation.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="block-whynearshore-item">
+                  <div class="row">
+                    <div class="col-12 col-md-2 col-lg-2">
+                      <div class="num-step">
+                        <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-step-3.svg" alt="Icon" class="img-fluid">
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-10 col-lg-10">
+                      <p><strong>Discovery & Scoping</strong></p>
+                      <p>
+                        We define workflows, KPIs, compliance requirements, and what success looks like for your operation.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="block-whynearshore-item">
+                  <div class="row">
+                    <div class="col-12 col-md-2 col-lg-2">
+                      <div class="num-step">
+                        <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-step-4.svg" alt="Icon" class="img-fluid">
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-10 col-lg-10">
+                      <p><strong>Discovery & Scoping</strong></p>
+                      <p>
+                        We define workflows, KPIs, compliance requirements, and what success looks like for your operation.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="block-whynearshore-item">
+                  <div class="row">
+                    <div class="col-12 col-md-2 col-lg-2">
+                      <div class="num-step lastnum">
+                        <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-step-5.svg" alt="Icon" class="img-fluid">
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-10 col-lg-10">
+                      <p><strong>Discovery & Scoping</strong></p>
+                      <p>
+                        We define workflows, KPIs, compliance requirements, and what success looks like for your operation.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>  
+            </div>
+            <!-- Image -->
+            <!-- content -->
+            <div class="col-12 col-lg-6">
+              <div class="block-whynearshore-data">
+                <div class="block-whynearshore-title">
+                  <h3>Our Process</h3>
+                  <h2>Built on Excellence, Delivered with Care</h2>
+                  <p>Our 5-step process ensures we design, build, and run operations that deliver. Each engagement is supported by a dedicated Client Experience Manager who works closely with your leadership.</p>
+                  <p>We don't just staff your operation. We own it: workflows, QA, coaching, performance, and continuous improvement.</p>
+                </div>
+                <p class="block-whynearshore-featuredcopy">
+                  Each phase includes defined outputs, accountability, and performance checkpoints to ensure predictable delivery.
+                </p>
+              </div>
+            </div>
+            <!-- content -->
+          </div>
+        </div>
+       </section>
+      <!-- process steps -->
 
       <!-- testimonials -->
       <section class="title-section all-color-primary pb-0">
