donde home bpo and about us 80

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
                     <span>Explore Our Services</span>
                     <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-arrow-left-lightblue.svg" alt="Icon" class="img-fluid">
                   </a> 
-                </div>                
+                </div>
                 <div class="pageservice-banner-pillsgrid p-0 theme-hero-pills">
                   <div class="pill-badge rounded-pill bg-aqua-transparent white-copy" role="status" aria-label="Answer every call">
                     <div class="pill-badge-icon"> 
@@ -954,6 +954,78 @@
        </section>
       <!-- whye nearshore -->
 
+      <!-- integrations section -->
+      <section class="integrations">
+        <div class="container">
+          <div class="integrations-title">
+            <h3>
+              Seamless Integration
+            </h3>
+            <h2>
+              We Adapt to Your Systems
+            </h2>
+            <p>
+              Our teams train on your platforms and processes. CRM, helpdesk, legal software, finance tools. We integrate seamlessly.
+            </p>
+          </div>
+          <div class="integrations-logos">
+            <div class="integrations-logos-block">
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations1.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations2.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations3.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations4.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations5.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations6.png" alt="Logo Integration">
+              </div>
+            </div>
+            <div class="integrations-logos-image">
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/intagrations-main-img.png" alt="Integrations">
+            </div>
+            <div class="integrations-logos-block">
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations7.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations8.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations9.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations10.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations11.png" alt="Logo Integration">
+              </div>
+              <div class="integrations-logos-block-logo">
+                <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/logo-integrations12.png" alt="Logo Integration">
+              </div>
+            </div>
+          </div>
+          <div class="integrations-title">
+            <p>
+              And many more. If your team uses it, we can learn it.
+            </p>
+            <a href="#get-your-free-audit">
+              Book a Discovery Call 
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-arrow-left-primary.svg" alt="Arrow right">
+            </a>
+          </div>
+        </div>
+      </section>       
+      <!-- integrations section -->
+
       <!-- why amalga large -->
        <section class="block-and-cards theme-gray" >
         <div class="title-section all-color-primary">
@@ -1021,6 +1093,167 @@
         </div>
       </section>
       <!-- why amalga large -->
+
+      <!-- results section -->
+      <section class="results">
+        <div class="container">
+          <div class="results-title">
+            <h3>
+              Proven Results
+            </h3>
+            <h2>
+              Nearshore BPO Results Across Industries
+            </h2>
+            <p>
+              See how Amalga nearshore BPO teams help clients scale operations, cut costs, and improve quality.
+            </p>
+          </div>
+          <div class="results-content">
+            <div class="row">
+              <div class="col-4">
+                <div class="results-content-item">
+                  <div class="results-content-item-inner">
+                    <div class="results-content-item-inner-img">
+                      <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/case-study1.jpg" alt="Case Study" class="img-fluid w-100">
+                    </div>
+                    <div class="results-content-item-inner-title">
+                      <div class="results-content-item-inner-title-block">
+                        <p>
+                          <span>
+                            Zero
+                          </span>
+                        </p>
+                        <p>
+                          Backlog Days
+                        </p>
+                      </div>
+                      <div class="results-content-item-inner-title-block">
+                        <p>
+                          <span>
+                            $14M+ 
+                          </span>
+                        </p>
+                        <p>
+                          Recovered
+                        </p>
+                      </div>
+                    </div>
+                    <div class="results-content-item-inner-text">
+                      <h4>
+                        Legal Services Firm Eliminates Backlog and Recovers $14M+
+                      </h4>
+                      <p>
+                        A California-based legal services firm was struggling with a 10-day intake backlog and mounting compliance risk.
+                      </p>
+                      <div class="calltoaction-btns-grid pt-0 pb-3 m-0 justify-content-start"> 
+                        <a class="btn btn-primary btn-lg m-0"> 
+                          <span class="text-start">Read case study </span>
+                          <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/arrow-right-white.svg" alt="Icon" class="img-fluid">
+                        </a> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="results-content-item">
+                  <div class="results-content-item-inner">
+                    <div class="results-content-item-inner-img">
+                      <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/case-study2.jpg" alt="Case Study">
+                    </div>
+                    <div class="results-content-item-inner-title">
+                      <div class="results-content-item-inner-title-block">
+                        <p>
+                          <span>
+                            3x 
+                          </span>
+                        </p>
+                        <p>
+                          Team Growth
+                        </p>
+                      </div>
+                      <div class="results-content-item-inner-title-block">
+                        <p>
+                          <span>
+                            90%+ 
+                          </span>
+                        </p>
+                        <p>
+                          Quality Scores
+                        </p>
+                      </div>
+                    </div>
+                    <div class="results-content-item-inner-text">
+                      <h4>
+                        Technology Company Scales Support 3x While Maintaining Quality
+                      </h4>
+                      <p>
+                        A U.S. technology company needed to rapidly scale their technical support team without sacrificing service quality.
+                      </p>
+                      <div class="calltoaction-btns-grid pt-0 pb-3 m-0 justify-content-start"> 
+                        <a class="btn btn-primary btn-lg m-0"> 
+                          <span class="text-start">Read case study </span>
+                          <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/arrow-right-white.svg" alt="Icon" class="img-fluid">
+                        </a> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="results-content-item">
+                  <div class="results-content-item-inner">
+                    <div class="results-content-item-inner-img">
+                      <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/case-study3.jpg" alt="Case Study">
+                    </div>
+                    <div class="results-content-item-inner-title">
+                      <div class="results-content-item-inner-title-block">
+                        <p>
+                          <span>
+                            50% 
+                          </span>
+                        </p>
+                        <p>
+                          Faster Response
+                        </p>
+                      </div>
+                      <div class="results-content-item-inner-title-block">
+                        <p>
+                          <span>
+                            86% 
+                          </span>
+                        </p>
+                        <p>
+                          CSAT Score
+                        </p>
+                      </div>
+                    </div>
+                    <div class="results-content-item-inner-text">
+                      <h4>
+                        Ecommerce Brand Cuts Response Time and Boosts Customer Satisfaction
+                      </h4>
+                      <p>
+                        A growing DTC brand was struggling to keep up with customer inquiries during peak seasons.
+                      </p>
+                      <div class="calltoaction-btns-grid pt-0 pb-3 m-0 justify-content-start"> 
+                        <a class="btn btn-primary btn-lg m-0"> 
+                          <span class="text-start">Read case study </span>
+                          <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/arrow-right-white.svg" alt="Icon" class="img-fluid">
+                        </a> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a>
+              View All Case Studies 
+              <img src="https://www.amalgagroup.com/hubfs/redisign-imgs/icon-arrow-left-primary.svg" alt="Arrow right">
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- results section -->
 
       <!-- process steps -->
        <section class="block-whynearshore theme-timeline">
@@ -1371,7 +1604,7 @@
       </section>
       <!-- last cta -->
 
-    </section>
+    </div>
     <!-- end main content -->
 
     <!-- Scripts -->
